testsuite/tests/indexed-types/should_fail/T6123.stderr

T6123.hs:10:14: error:
    • Couldn't match type ‘a0’ with ‘Id a0’ arising from a use of ‘cid’
      The type variable ‘a0’ is ambiguous
    • In the expression: cid undefined
      In an equation for ‘cundefined’: cundefined = cid undefined
    • Relevant bindings include
        cundefined :: a0 (bound at T6123.hs:10:1)
